--- a/layout.css
+++ b/layout.css
@@ -1,186 +1,170 @@
 body {
   font-size: 62.5%;
-  font-weight: 300;
   font-family: "Quicksand", sans-serif;
+  font-weight: 300;
   background-color: black;
   color: white;
   background-image: url(./house.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center -10rem;
-  position: relative; /* added this to make body a positioned ancestor */
-  height: 100%;
-}
-
-body::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background-color: rgba(
-    0,
-    0,
-    0,
-    0.7
-  ); /* 0.5 is the transparency level, adjust as needed */
-  pointer-events: none; /* ensures the overlay doesn't interfere with any interactions */
-  z-index: -1; /* ensures the overlay is behind the actual content */
-}
-hr {
-  width: 0%;
-  margin-block-start: 0.3rem;
-  transition: width 2s ease-in-out;
-  animation: expandHR 2s forwards; /* Use the animation */
-}
-
-@keyframes expandHR {
-  to {
-    width: 100%;
-  }
 }
 .container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  height: 100vh; /* This will ensure that the content stays vertically centered */
-}
-
-.main {
-  animation: fadeInAndMoveUp 2s ease forwards;
-  position: relative;
-  opacity: 0.9;
-  letter-spacing: 1rem;
-  font-size: 7rem;
-  display: flex;
-  justify-content: center;
   align-items: center;
 }
-
-@keyframes fadeInAndMoveUp {
+@keyframes combinedAnimation {
   0% {
     opacity: 0;
+    height: 50vh;
   }
   50% {
-    transform: translateY(0); /* Stays in the center */
-  }
-
-  89% {
     opacity: 1;
-    transform: translateY(0); /* Stays in the center */
+    height: 50vh; /* No change in height for the first half of the animation */
   }
   100% {
-    opacity: 1;
-    transform: translateY(-3rem); /* Moves 10rem up from the center */
+    opacity: 1; /* Opacity stays at 1 */
+    height: 30vh;
   }
 }
-
-.tech-info {
-  animation: fadeIn 2s ease forwards;
-  text-align: center;
-  padding: 0rem 0rem;
-  color: #d9d9d9; /* A softer white */
-  font-size: 2rem;
+.main {
+  opacity: 0; /* Initial opacity should be 0 to see the change */
+  height: 50vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  animation: combinedAnimation 1.5s forwards;
 }
-
-.tech-info h2 {
-  font-size: 2.4rem;
-
-  font-weight: 400;
-  letter-spacing: 0.2rem;
-  color: white; /* A brighter white for the header */
+.main div {
+  font-size: 6rem;
 }
-
-.tech-info p {
-  margin: 1rem 0;
+@keyframes animateWidth {
+  0% {
+    width: 0%;
+  }
+  1% {
+    visibility: visible;
+  }
+  100% {
+    visibility: visible;
+    width: 100%;
+  }
 }
-
-.tech-info span {
-  font-weight: 600;
-  color: #f4a261; /* A soft orange for emphasis */
-  transition: color 0.3s ease;
+.main hr {
+  visibility: hidden;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  width: 0;
+  transition: width 1s;
+  animation: animateWidth 0.2s 1.5s forwards;
 }
-
-.tech-info span:hover {
-  color: #f08d49; /* A slightly darker orange for hover effect */
-}
-@keyframes fadeIn {
+@keyframes fadeInScaleUp {
   0% {
     opacity: 0;
+    transform: scale(0);
   }
-  80% {
+  50% {
     opacity: 0;
+    transform: scale(0);
   }
   100% {
     opacity: 1;
+    transform: scale(1);
   }
 }
 
 .demo-button-container {
-  visibility: hidden; /* Start with the button not visible */
-  opacity: 0; /* Start with hidden button */
-  transform: scale(0.1); /* shrink the button */
-  display: flex; /* We'll keep this constant */
-  justify-content: center;
-  margin: 0rem 0 2rem 0;
-  animation: growAndFadeInButton 2s ease forwards; /* New animation name */
+  margin: 2rem;
+  opacity: 0; /* Initial state */
+  transform: scale(0);
+  animation: fadeInScaleUp 1s forwards;
+  animation-delay: 2.5s; /* Assuming the button should start its animation 1 second after the .tech-info animation */
 }
 
 .demo-button {
-  background-color: #f4a261; /* Soft orange color matching the text highlights */
+  background-color: #ef8d49; /* Adjust as per your preference */
   color: #fff;
   border: none;
-  border-radius: 25px;
-  padding: 1rem 2.5rem;
-  font-size: 1.8rem;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
+  padding: 1rem 2rem; /* Adjust for size */
+  font-size: 1.8rem; /* Font size */
+  border-radius: 5px; /* Rounded corners */
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2); /* Depth with shadow */
+  cursor: pointer; /* Pointer cursor on hover */
+  outline: none; /* Remove browser default outline */
+  transition: transform 0.2s, box-shadow 0.2s; /* Smooth transition */
+  text-align: center; /* Center the text */
+  display: inline-block; /* To make text-align work */
 }
 
+/* Hover effect */
 .demo-button:hover {
-  background-color: #f08d49; /* Slightly darker orange for hover */
+  transform: translateY(-2px); /* Moves the button slightly up */
+  box-shadow: 0 7px 20px rgba(0, 0, 0, 0.2); /* Increased shadow for depth */
 }
-@keyframes growAndFadeInButton {
+
+/* Active state when button is pressed */
+.demo-button:active {
+  transform: translateY(0); /* Return to original position */
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2); /* Restore original shadow */
+}
+
+@keyframes fadeIn {
   0% {
-  }
-  70% {
-    visibility: hidden;
     opacity: 0;
-    transform: scale(0);
-  }
-  89% {
-    visibility: hidden;
-    opacity: 0;
-    transform: scale(1.2);
   }
   100% {
-    visibility: visible;
     opacity: 1;
-    transform: scale(1); /* grow to original size */
   }
 }
 
-@media (max-width: 862px) {
-  .main {
-    font-size: 4rem; /* Adjust this size based on your requirements */
-  }
-  .tech-info {
-    font-size: 1.2rem;
-  }
-  .tech-info h2 {
-    font-size: 2rem;
-  }
+.tech-info {
+  opacity: 0; /* Initial state */
+  animation: fadeIn 1s forwards;
+  animation-delay: 2s; /* Since the .main animation duration is 2s */
 }
-@media (max-width: 550px) {
-  .main {
-    font-size: 4rem; /* Adjust this size based on your requirements */
-    letter-spacing: 0rem;
-  }
-  .tech-info {
-    font-size: 1rem;
-  }
-  .tech-info h2 {
-    font-size: 1.2rem;
+.tech-info {
+  text-align: center; /* Center the content */
+  padding: 1rem; /* Spacing around the content */
+  font-size: 1.8rem; /* Base font size */
+  line-height: 1.3; /* Spacing between lines for better readability */
+  color: #e6e6e6; /* A slightly lighter color than pure white for a softer look */
+  max-width: 80%; /* Contain the width for better readability on wider screens */
+  margin: 0 auto; /* Center the content block on the page */
+}
+
+.tech-info h2 {
+  font-size: 2.5rem; /* Bigger size for the heading */
+  margin-bottom: 1rem; /* Space below the heading */
+  color: #ef8d49; /* A soft gold color for distinction */
+}
+
+.tech-info span {
+  font-weight: 400; /* Slightly bolder than the rest of the text */
+  color: #ef8d49; /* Using the same soft gold color for distinction */
+}
+
+body::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: -1;
+}
+
+@media (max-width: 510px) {
+  .main div {
+    font-size: 4rem;
+
+    .tech-info h2 {
+      font-size: 2.3rem;
+    }
+
+    .tech-info p {
+      font-size: 1.3rem;
+    }
   }
 }
